# Alexandria

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  delivery_plan.md  docker-compose.yml  pyproject.toml  taskfile.yml
.codex/environments/: environment.toml
.githooks/: .pre-commit-config.yaml
docs/: architecture.md  rules.md  tests.md  workflows.md
docs/prompts/: delivery_07_backprop.md  delivery_08_fanout.md  delivery_09_placement.md  delivery_10_drift.md
notebooks/: 01_ingest_smoke.ipynb
sandbox/: 01_ingest_smoke.ipynb  02_retrieve_smoke.ipynb  03_lint_split_smoke.ipynb  04_entrypoints_smoke.ipynb  05_relevance_eval.ipynb  06_end_to_end.ipynb  main.ipynb
src/: __main__.py
src/application/: app.py  exceptions.py  policy.py  ports.py
src/application/usecases/: ingest.py  lint.py  refs.py  rerank.py  retrieve.py  route.py  seed.py  split.py
src/domain/: entity.py  exceptions.py  values.py
src/infrastructure/: config.py  embeddings.py  exceptions.py  search.py
src/infrastructure/agents/: ranker.py  (+2 more)
src/presentation/: contracts.py
tests/: README.md  __init__.py  conftest.py  fakes.py  test_scaffold.py
tests/application/: .gitkeep  test_app.py  test_architecture.py
tests/domain/: .gitkeep  test_entity.py
tests/entrypoints/: .gitkeep  test_api.py  test_cli.py  test_mcp.py  test_worker.py
tests/infrastructure/: .gitkeep  test_embeddings.py  test_search.py
tests/integration/: .gitkeep  test_end_to_end_flow.py  test_entrypoint_flow.py  test_ingest_flow.py  test_lint_split_flow.py  test_relevance_flow.py  test_retrieve_flow.py
(+36 files in other folders)
