[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "0.1.0"
description = "Wiki service for alexandriav2."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "library",
  "click>=8.4.1,<9",
  "fastapi>=0.123,<1",
  "jinja2>=3.1.6,<4",
  "langchain>=1.3.4",
  "langchain-core>=1.4.1",
  "langchain-openai>=1.2.2",
  "mcp>=1",
  "pgvector>=0.4.2,<1",
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.14.1,<3",
  "python-dotenv>=1.2.2,<2",
  "python-slugify>=8.0.4,<9",
  "sqlalchemy>=2.0.0,<3",
  "uvicorn>=0.49,<1",
  "psycopg2-binary>=2.9.12",
]

[project.scripts]
api = "presentation.api.app:main"
cli = "presentation.cli.app:main"
mcp = "presentation.mcp.app:main"
worker = "presentation.worker.app:main"
alexandria = "__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alexandria = [
  "resources/prompts/v0/*.md",
  "resources/templates/v0/*.j2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
